maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:24: error: value Nord is not a member of object plm.universe.Direction
  while(getDirection()!=Direction.Nord){
                                  ^IslandMaze:25: error: not found: value gache
    gache()
    ^IslandMaze:33: error: type mismatch;
 found   : Unit
 required: Boolean
      if(n=1){
          ^