maze.island.IslandMaze.scala.code
override def run() {
  murExterne()
   while(!estFaceMur){
    gauche()
  }
  droite()
   while(!estSurBiscuit){
    KeepHandOnSideWall()
    
  }
  prendBiscuit()
}

def KeepHandOnSideWall(){
  	while(!estFaceMur){
      avance()
      gauche()
    }
  droite()
}

def murExterne(){
  while(getDirection()!=Direction.Nord){
    gache()
  }
  while(getY()!=0){
    if(!estFaceMur){
      avance()
    }
    else{
      var n=1
      if(n=1){
        droite()
        if(estFaceMur){
          gauche()
          
          n=2
        } else {
          avance()
          gauche()
        }
      } else {
        gauche()
        if(estFaceMur){
          droite()
          n=1
        } else {
          avance()
          droite()
        }
      }
      
    }
  }
}